--- a/debug/canvas.html
+++ b/debug/canvas.html
@@ -61,7 +61,7 @@ var canvasStyle = {
     }]
 };
 
-var map = new maplibregl.Map({
+new maplibregl.Map({
     container: 'map',
     minZoom: 14,
     zoom: 17,
