--- a/debug/image.html
+++ b/debug/image.html
@@ -47,7 +47,7 @@ var imageStyle = {
     }]
 };
 
-var map = new maplibregl.Map({
+new maplibregl.Map({
     container: 'map',
     minZoom: 14,
     zoom: 17,
