--- a/debug/variable-anchor-with-icon-text-fit.html
+++ b/debug/variable-anchor-with-icon-text-fit.html
@@ -121,7 +121,7 @@ var style = {
     }]
 };
 
-var map = window.map = new maplibregl.Map({
+new maplibregl.Map({
     container: 'map',
     style
 });
