--- a/test/browser/fixtures/land.html
+++ b/test/browser/fixtures/land.html
@@ -18,7 +18,7 @@
 
 <script>
 
-var map = window.map = new maplibregl.Map({
+new maplibregl.Map({
     container: 'map',
     zoom: 1,
     fadeDuration: 0,
