--- a/bench/versions/index.html
+++ b/bench/versions/index.html
@@ -31,6 +31,10 @@
                 for (const name in window.maplibreglBenchmarks) {
                     const versions = [];
 
+                    // also handle benchmarks from mapboxgl releases
+                    if (window.mapboxglBenchmarks && window.mapboxglBenchmarks[name])
+                        Object.assign(window.maplibreglBenchmarks[name], window.mapboxglBenchmarks[name]);
+
                     for (const test in window.maplibreglBenchmarks[name]) {
                         versions.push({
                             name: test,
