--- a/bench/versions/index.html
+++ b/bench/versions/index.html
@@ -18,8 +18,8 @@
         Promise.resolve(params.has('compare') ?
             params.getAll('compare').filter(Boolean) :
             fetch('https://api.github.com/repos/maplibre/maplibre-gl-js/releases/latest')
-            .then(response => response.json())
-            .then(pkg => [pkg['tag_name'], 'main']))
+                .then(response => response.json())
+                .then(pkg => [pkg['tag_name'], 'main']))
             .then(versions => {
                 return versions
                     .map(v => `https://maplibre.org/maplibre-gl-js/benchmarks/${v}/benchmarks_generated.js`)
@@ -50,7 +50,7 @@
             .catch(err => console.error(err));
 
         function loadScript(src) {
-            return new Promise(function (resolve, reject) {
+            return new Promise((resolve, reject) => {
                 const s = document.createElement('script');
                 s.src = src;
                 s.onload = resolve;
