--- a/bench/versions/index.html
+++ b/bench/versions/index.html
@@ -24,14 +24,14 @@
                 if (params.has('compare')) {
                     versions = params.getAll('compare').filter(Boolean);
                 } else {
-                    let response = await fetch('https://api.github.com/repos/maplibre/maplibre-gl-js/releases/latest');
-                    let responseJson = await response.json();
+                    const response = await fetch('https://api.github.com/repos/maplibre/maplibre-gl-js/releases/latest');
+                    const responseJson = await response.json();
                     versions = [responseJson['tag_name'], 'main'];
                 }
                 console.log(`Comapring versions: ${versions}`);
-                let versionsScripts = versions.map(v => `https://maplibre.org/maplibre-gl-js/benchmarks/${v}/benchmarks_generated.js`)
+                const versionsScripts = versions.map(v => `https://maplibre.org/maplibre-gl-js/benchmarks/${v}/benchmarks_generated.js`)
                     .concat('/bench/versions/benchmarks_generated.js');
-                for (let script of versionsScripts) {
+                for (const script of versionsScripts) {
                     await loadScript(script);
                 }
                 const benchmarks = [];
