Update property values and description

--- a/debug/symbols.html
+++ b/debug/symbols.html
@@ -130,7 +130,7 @@
                 'source': 'places',
                 'filter': ['!=', ['get', 'featureclass'], 'base'],
                 'layout': {
-                    'text-overlap': 'none',
+                    'text-overlap': 'never',
                     'text-variable-anchor': ['top', 'bottom', 'left', 'right'],
                     'text-field': ['get', 'name'],
                     'text-offset': [1.2, 1.4],
