Add `text-rotate-to-line` property

--- a/debug/shield-rotation.html
+++ b/debug/shield-rotation.html
@@ -306,7 +306,9 @@
                                 ]
                             ],
                             'text-anchor': 'center',
-                            'symbol-placement': 'line'
+                            'symbol-placement': 'line',
+                            'text-rotate-to-line': false,
+                            'text-pitch-alignment': 'viewport',
                         },
                         'source': 'openmaptiles',
                         'metadata': {},
