change exaggeration type to number. add options to control example

--- a/debug/terrain_control.html
+++ b/debug/terrain_control.html
@@ -37,6 +37,10 @@ map.on("load", () => {
   map.addControl(
     new maplibregl.TerrainControl({
       id: "terrain"
+      options: {
+        exaggeration: 2,
+        elevationOffset: 0
+      }
     })
   );
 });
