disalbe false eslint errors

--- a/bench/versions/index.html
+++ b/bench/versions/index.html
@@ -53,6 +53,7 @@
                 }
 
                 const results = await window.Benchmarks.run(benchmarks);
+                // eslint-disable-next-line require-atomic-updates
                 window.maplibreglBenchmarkResults = {};
                 for (const result of results) {
                     window.maplibreglBenchmarkResults[result.name] = {};
@@ -60,6 +61,7 @@
                         window.maplibreglBenchmarkResults[result.name][version.name] = {name: version.name, summary: version.summary, regression: version.regression};
                     }
                 }
+                // eslint-disable-next-line require-atomic-updates
                 window.maplibreglBenchmarkFinished = true;
             } catch (ex) {
                 console.error(ex);
