--- a/debug/terrain_control.html
+++ b/debug/terrain_control.html
@@ -36,7 +36,7 @@ map.on("load", () => {
   });
   map.addControl(
     new maplibregl.TerrainControl({
-      id: "terrain"
+      id: "terrain",
       options: {
         exaggeration: 2,
         elevationOffset: 0
