script to run benchmarks in headless chromium and generate benchmarks (#760)
* resurrect to_pdf.js from #421

* fix massive slow down after first 5s in Paint benchmark

* use default options to load benchmark url

* better error handling

* make benchmark results available and use them for better output in to_pdf.js

* do not pollute top level dirs with pdfs

* refactor using top level await, reuse browser and webpage, get benchmarks list and version strings from browser

* rename and move script

* copy args from gl-stats.js

* add script to run benchmarks in package.json

* eslint

* disalbe false eslint errors

* add some minimal documentation for new script

* --use-gl=angle works better on my linux vm

* Fix lockfile

Co-authored-by: Oliver Wipfli <oliver.wipfli@leichteralsluft.ch>

--- a/bench/versions/index.html
+++ b/bench/versions/index.html
@@ -52,7 +52,17 @@
                     benchmarks.push({name, versions});
                 }
 
-                window.Benchmarks.run(benchmarks);
+                const results = await window.Benchmarks.run(benchmarks);
+                // eslint-disable-next-line require-atomic-updates
+                window.maplibreglBenchmarkResults = {};
+                for (const result of results) {
+                    window.maplibreglBenchmarkResults[result.name] = {};
+                    for (const version of result.versions) {
+                        window.maplibreglBenchmarkResults[result.name][version.name] = {name: version.name, summary: version.summary, regression: version.regression};
+                    }
+                }
+                // eslint-disable-next-line require-atomic-updates
+                window.maplibreglBenchmarkFinished = true;
             } catch (ex) {
                 console.error(ex);
             }
