--- a/bench/styles/index.html
+++ b/bench/styles/index.html
@@ -12,10 +12,12 @@
 
 <body>
     <div id="benchmarks"></div>
-    <script src="/bench/styles/benchmarks_generated.js"></script>
-    <script src="/bench/benchmarks_view_generated.js"></script>
-    <script>
-        window.Benchmarks.run(benchmarks);
+
+    <script type="module">
+        await import("/bench/styles/benchmarks_generated.js")
+        const {run} = await import("/bench/benchmarks_view_generated.js");
+
+        run(benchmarks);
     </script>
 </body>
 
