--- a/bench/styles/index.html
+++ b/bench/styles/index.html
@@ -14,8 +14,8 @@
     <div id="benchmarks"></div>
 
     <script type="module">
-        await import("/bench/styles/benchmarks_generated.js")
-        const {run} = await import("/bench/benchmarks_view_generated.js");
+        await import('/bench/styles/benchmarks_generated.js');
+        const {run} = await import('/bench/benchmarks_view_generated.js');
 
         run(benchmarks);
     </script>
