Move benchmarks to ES modules (#964)

--- a/bench/versions/index.html
+++ b/bench/versions/index.html
@@ -12,8 +12,9 @@
 
 <body>
     <div id="benchmarks"></div>
-    <script src="/bench/benchmarks_view_generated.js"></script>
-    <script>
+    <!-- <script type="module" src="/bench/benchmarks_view_generated.js"></script> -->
+    <script type="module">
+        const {run} = await import('/bench/benchmarks_view_generated.js');
         runComparison();
 
         async function runComparison() {
@@ -52,7 +53,7 @@
                     benchmarks.push({name, versions});
                 }
 
-                const results = await window.Benchmarks.run(benchmarks);
+                const results = await run(benchmarks);
                 // eslint-disable-next-line require-atomic-updates
                 window.maplibreglBenchmarkResults = {};
                 for (const result of results) {
@@ -72,6 +73,7 @@
             return new Promise((resolve, reject) => {
                 const s = document.createElement('script');
                 s.src = src;
+                s.type = 'module';
                 s.onload = resolve;
                 s.onerror = reject;
                 document.head.appendChild(s);
