--- a/bench/styles/index.html
+++ b/bench/styles/index.html
@@ -12,12 +12,10 @@
 
 <body>
     <div id="benchmarks"></div>
-
-    <script type="module">
-        await import('/bench/styles/benchmarks_generated.js');
-        const {run} = await import('/bench/benchmarks_view_generated.js');
-
-        run(benchmarks);
+    <script src="/bench/styles/benchmarks_generated.js"></script>
+    <script src="/bench/benchmarks_view_generated.js"></script>
+    <script>
+        window.Benchmarks.run(benchmarks);
     </script>
 </body>
 
