--- a/debug/terrain_control.html
+++ b/debug/terrain_control.html
@@ -31,14 +31,14 @@ map.on('load', () => {
     map.addSource('terrain', {
         'type': 'raster-dem',
         'tiles': ['https://vtc-cdn.maptoolkit.net/terrainrgb/{z}/{x}/{y}.webp'],
-        'encoding': 'mtk',
+        'encoding': 'mapbox',
         'maxzoom': 14
     });
     map.addControl(
         new maplibregl.TerrainControl({
             id: 'terrain',
             options: {
-                exaggeration: 2,
+                exaggeration: 0.33,
                 elevationOffset: 0
             }
         })
