--- a/debug/terrain_control.html
+++ b/debug/terrain_control.html
@@ -37,10 +37,7 @@ map.on('load', () => {
     map.addControl(
         new maplibregl.TerrainControl({
             id: 'terrain',
-            options: {
-                exaggeration: 0.33,
-                elevationOffset: 0
-            }
+            options: {exaggeration: 0.33}
         })
     );
 });
