Fix `text-rotation-alignment: viewport`

--- a/debug/shield-rotation.html
+++ b/debug/shield-rotation.html
@@ -21,7 +21,71 @@
 </head>
 
 <body>
-    <div id='map'></div>
+    <style>
+        .map-overlay {
+            font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+            position: absolute;
+            width: 200px;
+            top: 0;
+            left: 0;
+            padding: 10px;
+        }
+
+        .map-overlay .map-overlay-inner {
+            background-color: #fff;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+            border-radius: 3px;
+            padding: 10px;
+            margin-bottom: 10px;
+        }
+
+        .map-overlay-inner fieldset {
+            border: none;
+            padding: 0;
+            margin: 0 0 10px;
+        }
+
+        .map-overlay-inner fieldset:last-child {
+            margin: 0;
+        }
+
+        .map-overlay-inner select {
+            width: 100%;
+        }
+
+        .map-overlay-inner label {
+            display: block;
+            font-weight: bold;
+            margin: 0 0 5px;
+        }
+    </style>
+
+    <div id="map"></div>
+    <div class="map-overlay top">
+        <div class="map-overlay-inner">
+            <fieldset>
+                <label>text-rotation-alignment</label>
+                <select id="rotation" name="rotation">
+                    <option value="map">map</option>
+                    <option value="viewport">viewport</option>
+                </select>
+            </fieldset>
+            <fieldset>
+                <label>text-pitch-alignment</label>
+                <select id="pitch" name="pitch">
+                    <option value="map">map</option>
+                    <option value="viewport">viewport</option>
+                </select>
+            </fieldset>
+            <fieldset>
+                <label>text-rotate-to-line</label>
+                <select id="line" name="line">
+                    <option value="true">true</option>
+                    <option value="false">false</option>
+                </select>
+            </fieldset>
+        </div>
+    </div>
 
     <script src='../dist/maplibre-gl-dev.js'></script>
     <script>
@@ -87,6 +151,19 @@
                     'text-rotate-to-line': true
                 }
             });
+            var rotation = document.getElementById('rotation');
+            rotation.addEventListener('click', function() {
+                map.setLayoutProperty('maine-text', 'text-rotation-alignment', rotation.value);
+            });
+            var pitch = document.getElementById('pitch');
+            pitch.addEventListener('click', function() {
+                map.setLayoutProperty('maine-text', 'text-pitch-alignment', pitch.value);
+            });
+            var line = document.getElementById('line');
+            line.addEventListener('click', function() {
+                map.setLayoutProperty('maine-text', 'text-rotate-to-line', line.value === 'true');
+            });
+
         });
 
     </script>
