Increase example font size

--- a/debug/shield-rotation.html
+++ b/debug/shield-rotation.html
@@ -148,7 +148,8 @@
                     'symbol-placement': 'line',
                     'text-pitch-alignment': 'map',
                     'text-rotation-alignment': 'map',
-                    'text-rotate-to-line': true
+                    'text-rotate-to-line': true,
+                    'text-size': 36
                 }
             });
             var rotation = document.getElementById('rotation');
