Rename `viewport-letter` to `viewport-glyph`. Fix typo.

--- a/debug/shield-rotation.html
+++ b/debug/shield-rotation.html
@@ -68,7 +68,7 @@
                 <select id="rotation" name="rotation">
                     <option value="map">map</option>
                     <option value="viewport">viewport</option>
-                    <option value="viewport-letter">viewport-letter</option>
+                    <option value="viewport-glyph">viewport-glyph</option>
                 </select>
             </fieldset>
             <fieldset>
